--- a/task09-multimodal-video-analysis/src/components/audio-pulse/audio-pulse.scss
+++ b/task09-multimodal-video-analysis/src/components/audio-pulse/audio-pulse.scss
@@ -6,7 +6,7 @@
   transition: all 0.5s;
 
   & > div {
-    background-color: var(--Neutral-30);
+    background-color: var(--Neutral-50, #505456);
     border-radius: 1000px;
     width: 4px;
     min-height: 4px;
@@ -25,7 +25,7 @@
     opacity: 1;
 
     & > div {
-      background-color: var(--Neutral-80);
+      background-color: var(--Blue-600, #1a69c4);
     }
   }
 }
